Add Dockerfiles and build configs for local build

--- a/cad-AuthService/pom.xml
+++ b/cad-AuthService/pom.xml
@@ -11,7 +11,7 @@
     <groupId>de.htwg</groupId>
     <artifactId>cad-AuthService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>cad-AuthService</name>
     <description>cad-AuthService</description>
     <properties>
@@ -20,10 +20,10 @@
         <spring-cloud.version>2021.0.5</spring-cloud.version>
     </properties>
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
