--- a/cad-WorkoutService/pom.xml
+++ b/cad-WorkoutService/pom.xml
@@ -12,7 +12,7 @@
     <groupId>de.htwg</groupId>
     <artifactId>cad-WorkoutService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>cad-WorkoutService</name>
     <description>cad-WorkoutService</description>
     <properties>
