--- a/cad-UserService/pom.xml
+++ b/cad-UserService/pom.xml
@@ -12,7 +12,7 @@
     <groupId>de.htwg</groupId>
     <artifactId>cad-UserService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>cad-UserService</name>
     <description>cad-UserService</description>
 
