--- a/kubernetes/cad-AuthServiceDeployment.yaml
+++ b/kubernetes/cad-AuthServiceDeployment.yaml
@@ -1,10 +1,22 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: auth-service
+  name: auth-service-deployment
+  labels:
+    app: auth-service
 spec:
-  containers:
-    - name: auth-service
-      image: cad-auth:latest
-      ports:
-        - containerPort: 7080
+  replicas: 1
+  selector:
+    matchLabels:
+      app: auth-service
+  template:
+    metadata:
+      labels:
+        app: auth-service
+    spec:
+      containers:
+        - name: auth-service
+          image: cad-auth:latest
+          imagePullPolicy: Never
+          ports:
+            - containerPort: 80
