--- a/kubernetes/cad-AuthServiceIngress.yaml
+++ b/kubernetes/cad-AuthServiceIngress.yaml
@@ -1,11 +1,10 @@
-apiVersion: v1
-kind: Service
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: auth-service-service
+  name: minimal-ingress
 spec:
-  selector:
-    app.kubernetes.io/name: auth-service
-  ports:
-    - protocol: TCP
-      port: 7080
-      targetPort: 9376
+  defaultBackend:
+    service:
+      name: auth-service-service
+      port:
+        number: 80
