--- a/kubernetes/cad-UserServiceDeployment.yaml
+++ b/kubernetes/cad-UserServiceDeployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth
+  name: user
 spec:
   selector:
     matchLabels:
-      app: auth
+      app: user
   replicas: 1
   template:
     metadata:
       labels:
-        app: auth
+        app: user
     spec:
       containers:
-        - name: auth
-          image: cad-auth:latest
+        - name: user
+          image: cad-user:latest
           imagePullPolicy: Never
           ports:
-            - containerPort: 7080
+            - containerPort: 7082
