--- a/kubernetes/cad-FrontendService.yaml
+++ b/kubernetes/cad-FrontendService.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth
+  name: frontend
   labels:
-    run: auth
+    run: frontend
 spec:
   selector:
-    app: auth
+    app: frontend
   ports:
     - protocol: TCP
-      port: 7080
+      port: 80
