--- a/kubernetes/cad-GymServiceService.yaml
+++ b/kubernetes/cad-GymServiceService.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth
+  name: gym
   labels:
-    run: auth
+    run: gym
 spec:
   selector:
-    app: auth
+    app: gym
   ports:
     - protocol: TCP
-      port: 7080
+      port: 7081
