--- a/kubernetes/cad-WorkoutServiceDeployment.yaml
+++ b/kubernetes/cad-WorkoutServiceDeployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth
+  name: workout
 spec:
   selector:
     matchLabels:
-      app: auth
+      app: workout
   replicas: 1
   template:
     metadata:
       labels:
-        app: auth
+        app: workout
     spec:
       containers:
-        - name: auth
-          image: cad-auth:latest
+        - name: workout
+          image: cad-workout:latest
           imagePullPolicy: Never
           ports:
-            - containerPort: 7080
+            - containerPort: 7083
