--- a/kubernetes/cad-WorkoutServiceService.yaml
+++ b/kubernetes/cad-WorkoutServiceService.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth
+  name: workout
   labels:
-    run: auth
+    run: workout
 spec:
   selector:
-    app: auth
+    app: workout
   ports:
     - protocol: TCP
-      port: 7080
+      port: 7083
