--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -1,4 +1,4 @@
-name: Docker build and push
+name: Docker Build and Deploy
 
 # Once a push registered to the master, dev or a release branch, this workflow is executed.
 # It is also executed when a pull request is merged (which leads to a push).
@@ -26,7 +26,7 @@ jobs:
           if [[ $GITHUB_REF_NAME == 'master' ]]; then
             echo "version=latest" >> $GITHUB_OUTPUT
           elif [[ $GITHUB_REF_NAME == 'dev' ]]; then
-            echo "version=latest" >> $GITHUB_OUTPUT
+            echo "version=dev" >> $GITHUB_OUTPUT
           else
             version=${$GITHUB_REF_NAME#*/}
             echo "version=$version" >> $GITHUB_OUTPUT
