--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,7 +27,10 @@ jobs:
         uses: actions/checkout@v3
       -
         name: Build docker image
-        run: docker build -t ${{ secrets.DOCKER_USER }}/${{ inputs.tag }}:${{ inputs.version }} -o type=docker,dest=/tmp/${{ inputs.tag }}.tar ${{ inputs.context }}
+        run: docker build -t ${{ secrets.DOCKER_USER }}/${{ inputs.tag }}:${{ inputs.version }} ${{ inputs.context }}
+      -
+        name: Save docker image in artifact
+        run: docker save -o /tmp/${{ inputs.tag }}.tar ${{ secrets.DOCKER_USER }}/${{ inputs.tag }}:${{ inputs.version }}
       -
         name: Upload docker image as artifact
         uses: actions/upload-artifact@v2
