--- a/kubernetes/cad-GymServiceDeployment.yaml
+++ b/kubernetes/cad-GymServiceDeployment.yaml
@@ -14,7 +14,6 @@ spec:
     spec:
       containers:
         - name: gym
-          image: cad-gym:latest
-          imagePullPolicy: Never
+          image: drescherflo/cad-gym-gym-service:latest
           ports:
             - containerPort: 7081
