--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -11,6 +11,7 @@ on:
     branches:
       - master
       - dev
+      - staging
       - 'releases/**'
 
 jobs:
@@ -27,6 +28,8 @@ jobs:
             echo "version=latest" >> $GITHUB_OUTPUT
           elif [[ $GITHUB_REF_NAME == 'dev' ]]; then
             echo "version=dev" >> $GITHUB_OUTPUT
+          elif [[ $GITHUB_REF_NAME == 'staging' ]]; then
+            echo "version=staging" >> $GITHUB_OUTPUT
           else
             version=${$GITHUB_REF_NAME#*/}
             echo "version=$version" >> $GITHUB_OUTPUT
