--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ gen
 /terraform/environments/prod/.terraform.lock.hcl
 /terraform/environments/test/.terraform/
 /terraform/environments/test/.terraform.lock.hcl
+/cad-AuthService/src/main/resources/authKey.json
