Add Helm Teamplates

--- a/cad-gymapp/templates/cad-UserServiceDeployment.yaml
+++ b/cad-gymapp/templates/cad-UserServiceDeployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: user
-          image: drescherflo/cad-gym-user-service:latest
+          image: drescherflo/cad-gym-user-service:dev
           ports:
             - containerPort: 7082
