--- a/cad-gymapp/templates/cad-AuthServiceDeployment.yaml
+++ b/cad-gymapp/templates/cad-AuthServiceDeployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: workout
+  name: auth
 spec:
   selector:
     matchLabels:
-      app: workout
+      app: auth
   replicas: 1
   template:
     metadata:
       labels:
-        app: workout
+        app: auth
     spec:
       containers:
-        - name: workout
-          image: drescherflo/cad-gym-workout-service:latest
+        - name: auth
+          image: drescherflo/cad-gym-auth-service:dev
           ports:
-            - containerPort: 7083
+            - containerPort: 7080
