--- a/cad-gymapp/templates/cad-FrontendDeployment.yaml
+++ b/cad-gymapp/templates/cad-FrontendDeployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth
+  name: frontend
 spec:
   selector:
     matchLabels:
-      app: auth
+      app: frontend
   replicas: 1
   template:
     metadata:
       labels:
-        app: auth
+        app: frontend
     spec:
       containers:
-        - name: auth
-          image: drescherflo/cad-gym-auth-service:latest
+        - name: frontend
+          image: drescherflo/cad-gym-frontend:dev
           ports:
-            - containerPort: 7080
+            - containerPort: 80
