--- a/cad-gymapp/templates/cad-GymServiceDeployment.yaml
+++ b/cad-gymapp/templates/cad-GymServiceDeployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: gym
-          image: drescherflo/cad-gym-gym-service:latest
+          image: drescherflo/cad-gym-gym-service:dev
           ports:
             - containerPort: 7081
