Fix missing Default Credentials

--- a/cad-GymService/src/main/resources/application.properties
+++ b/cad-GymService/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=7081
 server.servlet.context-path=/gym
 spring.cloud.gcp.project-id=cad-project-368216
+spring.cloud.gcp.credentials.location=classpath:tf_service_account_key.json
