--- a/cad-Frontend/tsconfig.json
+++ b/cad-Frontend/tsconfig.json
@@ -22,7 +22,9 @@
       "es2020",
       "dom"
     ],
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
