--- a/cad-UserService/pom.xml
+++ b/cad-UserService/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>google-cloud-logging</artifactId>
             <version>3.13.7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>9.1.1</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
