--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -21,8 +21,7 @@ jobs:
     outputs:
       version: ${{ steps.set-tag.outputs.version }}
     steps:
-      -
-        id: set-tag
+      - id: set-tag
         run: |
           if [[ $GITHUB_REF_NAME == 'master' ]]; then
             echo "version=latest" >> $GITHUB_OUTPUT
@@ -46,16 +45,16 @@ jobs:
     secrets:
       DOCKER_USER: ${{ secrets.DOCKER_USER }}
 
-  build-auth-service:
-    name: Build AuthService
-    needs: set-image-version
-    uses: ./.github/workflows/docker-build.yml
-    with:
-      context: ./cad-AuthService
-      tag: cad-gym-auth-service
-      version: ${{ needs.set-image-version.outputs.version }}
-    secrets:
-      DOCKER_USER: ${{ secrets.DOCKER_USER }}
+  #  build-auth-service:
+  #    name: Build AuthService
+  #    needs: set-image-version
+  #    uses: ./.github/workflows/docker-build.yml
+  #    with:
+  #      context: ./cad-AuthService
+  #      tag: cad-gym-auth-service
+  #      version: ${{ needs.set-image-version.outputs.version }}
+  #    secrets:
+  #      DOCKER_USER: ${{ secrets.DOCKER_USER }}
 
   build-gym-service:
     name: Build GymService
@@ -78,7 +77,7 @@ jobs:
       version: ${{ needs.set-image-version.outputs.version }}
     secrets:
       DOCKER_USER: ${{ secrets.DOCKER_USER }}
-      
+
   build-workout-service:
     name: Build WorkoutService
     needs: set-image-version
@@ -89,7 +88,7 @@ jobs:
       version: ${{ needs.set-image-version.outputs.version }}
     secrets:
       DOCKER_USER: ${{ secrets.DOCKER_USER }}
-      
+
   push-frontend:
     name: Push Frontend
     needs:
@@ -107,22 +106,22 @@ jobs:
       DOCKER_USER: ${{ secrets.DOCKER_USER }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
-  push-auth-service:
-    name: Push AuthService
-    needs:
-      - set-image-version
-      - build-frontend
-      - build-auth-service
-      - build-gym-service
-      - build-user-service
-      - build-workout-service
-    uses: ./.github/workflows/docker-push.yml
-    with:
-      tag: cad-gym-auth-service
-      version: ${{ needs.set-image-version.outputs.version }}
-    secrets:
-      DOCKER_USER: ${{ secrets.DOCKER_USER }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  #  push-auth-service:
+  #    name: Push AuthService
+  #    needs:
+  #      - set-image-version
+  #      - build-frontend
+  #      - build-auth-service
+  #      - build-gym-service
+  #      - build-user-service
+  #      - build-workout-service
+  #    uses: ./.github/workflows/docker-push.yml
+  #    with:
+  #      tag: cad-gym-auth-service
+  #      version: ${{ needs.set-image-version.outputs.version }}
+  #    secrets:
+  #      DOCKER_USER: ${{ secrets.DOCKER_USER }}
+  #      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
   push-gym-service:
     name: Push GymService
