--- a/cad-gymapp/templates/cad-AuthServiceService.yaml
+++ b/cad-gymapp/templates/cad-AuthServiceService.yaml
@@ -1,12 +1,12 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: auth
-  labels:
-    run: auth
-spec:
-  selector:
-    app: auth
-  ports:
-    - protocol: TCP
-      port: 7080
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: auth
+#  labels:
+#    run: auth
+#spec:
+#  selector:
+#    app: auth
+#  ports:
+#    - protocol: TCP
+#      port: 7080
