--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,23 +10,23 @@ services:
     #depends_on:
     #  - backend
     #command: [ "./wait-for-it.sh", "-t", "20", "backend:8080", "--", "nginx", "-g", "daemon off;" ]
-  auth-service:
-    image: drescherflo/cad-gym-auth-service:latest
-    restart: unless-stopped
-    ports:
-      - "7080:7080"
-    #links:
-    #  - postgres
-    #depends_on:
-    #  - postgres
-    #command: [ "./wait-for-it.sh", "postgres:5432", "--", "mvn", "spring-boot:run" ]
-    environment:
-      #SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/cad1
-      #SPRING_DATASOURCE_USERNAME: cad
-      #SPRING_DATASOURCE_PASSWORD: 1234567890
-      GOOGLE_APPLICATION_CREDENTIALS: "/credentials/gcloud_credentials.json"
-    volumes:
-      - $HOME/.config/gcloud/application_default_credentials.json:/credentials/gcloud_credentials.json:ro
+  #  auth-service:
+  #    image: drescherflo/cad-gym-auth-service:latest
+  #    restart: unless-stopped
+  #    ports:
+  #      - "7080:7080"
+  #    #links:
+  #    #  - postgres
+  #    #depends_on:
+  #    #  - postgres
+  #    #command: [ "./wait-for-it.sh", "postgres:5432", "--", "mvn", "spring-boot:run" ]
+  #    environment:
+  #      #SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/cad1
+  #      #SPRING_DATASOURCE_USERNAME: cad
+  #      #SPRING_DATASOURCE_PASSWORD: 1234567890
+  #      GOOGLE_APPLICATION_CREDENTIALS: "/credentials/gcloud_credentials.json"
+  #    volumes:
+  #      - $HOME/.config/gcloud/application_default_credentials.json:/credentials/gcloud_credentials.json:ro
 
   gym-service:
     image: drescherflo/cad-gym-gym-service:latest
