--- a/cad-GymService/src/main/resources/application.properties
+++ b/cad-GymService/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.servlet.context-path=/gym
 spring.cloud.gcp.project-id=cad-project-368216
 spring.cloud.gcp.credentials.location=classpath:tf_service_account_key.json
 spring.cloud.gcp.bucket.name=gym-bucket-dev
+spring.cloud.gcp.logging.enabled=true
