--- a/cad-UserService/src/main/resources/application.properties
+++ b/cad-UserService/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=7082
 server.servlet.context-path=/user
 spring.cloud.gcp.project-id=cad-project-368216
 spring.cloud.gcp.credentials.location=classpath:tf_service_account_key.json
+spring.cloud.gcp.logging.enabled=true
