--- a/cad-WorkoutService/pom.xml
+++ b/cad-WorkoutService/pom.xml
@@ -21,11 +21,15 @@
         <spring-cloud.version>2021.0.5</spring-cloud.version>
     </properties>
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-logging -->
+        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.google.cloud/google-cloud-logging &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.google.cloud</groupId>-->
+        <!--            <artifactId>google-cloud-logging</artifactId>-->
+        <!--            <version>3.13.7</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>com.google.cloud</groupId>
-            <artifactId>google-cloud-logging</artifactId>
-            <version>3.13.7</version>
+            <artifactId>spring-cloud-gcp-starter-logging</artifactId>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
         <dependency>
