--- a/cad-WorkoutService/src/main/resources/application.properties
+++ b/cad-WorkoutService/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.username=cad
 spring.datasource.password=1234567890
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
+spring.cloud.gcp.logging.enabled=true
