--- a/cad-gymapp/templates/cad-FrontendDeployment.yaml
+++ b/cad-gymapp/templates/cad-FrontendDeployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: drescherflo/cad-gym-frontend:dev
+          image: europe-west3-docker.pkg.dev/cad-project-368216/cad-repo-dev/cad-gym-frontend:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
