--- a/cad-gymapp/templates/cad-UserServiceDeployment.yaml
+++ b/cad-gymapp/templates/cad-UserServiceDeployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
         - name: user
-          image: drescherflo/cad-gym-user-service:dev
+          image: europe-west3-docker.pkg.dev/cad-project-368216/cad-repo-dev/cad-gym-user-service:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 7082
