--- a/cad-WorkoutService/src/main/resources/application-prod.properties
+++ b/cad-WorkoutService/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 server.port=7083
 server.servlet.context-path=/workout
-spring.cloud.gcp.project-id=cad-project-368216
+spring.cloud.gcp.project-id=cad-gym-app
 spring.cloud.gcp.credentials.location=classpath:tf_service_account_key.json
 spring.jpa.database=postgresql
 spring.jpa.show-sql=true
