--- a/cad-GymService/src/main/resources/application-prod.properties
+++ b/cad-GymService/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 server.port=7081
 server.servlet.context-path=/gym
-spring.cloud.gcp.project-id=cad-project-368216
+spring.cloud.gcp.project-id=cad-gym-app
 spring.cloud.gcp.credentials.location=classpath:tf_service_account_key.json
 spring.cloud.gcp.bucket.name=gym-bucket-prod
