--- a/cad-UserService/src/main/resources/application.properties
+++ b/cad-UserService/src/main/resources/application.properties
@@ -3,3 +3,10 @@ server.servlet.context-path=/user
 spring.cloud.gcp.project-id=cad-gym-app
 spring.cloud.gcp.credentials.location=classpath:tf_service_account_key.json
 spring.cloud.gcp.logging.enabled=true
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username=cad
+spring.datasource.password=1234567890
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
