--- a/db-docker-compose.yaml
+++ b/db-docker-compose.yaml
@@ -12,3 +12,16 @@ services:
       POSTGRES_USER: cad
     volumes:
       - ./data:/var/lib/postgresql/data:rw
+
+  user-service-db:
+    image: postgres:latest
+    restart: unless-stopped
+    ports:
+      - "5433:5432"
+    environment:
+      PGDATA: /var/lib/postgresql/data/cad
+      POSTGRES_DB: cad1
+      POSTGRES_PASSWORD: 1234567890
+      POSTGRES_USER: cad
+    volumes:
+      - ./data:/var/lib/postgresql/data:rw
