--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,6 @@
         <module>cad-UserService</module>
         <module>cad-WorkoutService</module>
         <module>cad-ReportingService</module>
+        <module>cad-InvoiceCronjob</module>
     </modules>
 </project>
