--- a/cad-gymapp/templates/frontend-service.yaml
+++ b/cad-gymapp/templates/frontend-service.yaml
@@ -1,9 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
-  labels:
-    run: frontend
+  name: frontend-service
 spec:
   selector:
     app: frontend
