--- a/cad-gymapp/templates/gym-service-service.yaml
+++ b/cad-gymapp/templates/gym-service-service.yaml
@@ -1,12 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gym
-  labels:
-    run: gym
+  name: gym-service-service
 spec:
   selector:
-    app: gym
+    app: gym-service
   ports:
     - protocol: TCP
       port: 7081
