--- a/cad-gymapp/templates/user-service-service.yaml
+++ b/cad-gymapp/templates/user-service-service.yaml
@@ -1,12 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: user
-  labels:
-    run: user
+  name: user-service-service
 spec:
   selector:
-    app: user
+    app: user-service
   ports:
     - protocol: TCP
       port: 7082
