--- a/cad-gymapp/templates/frontend-configmap.yaml
+++ b/cad-gymapp/templates/frontend-configmap.yaml
@@ -3,9 +3,6 @@ kind: ConfigMap
 metadata:
   name: frontend-configmap
 data:
-  gym_service_name: "gym-service-service"
-  gym_service_port: "7081"
-  user_service_name: "user-service-service"
-  user_service_port: "7082"
-  workout_service_name: "workout-service-service"
-  workout_service_port: "7083"
+  gym_service_url: "http://gym-service-service:7081"
+  user_service_url: "http://user-service-service:7082"
+  workout_service_url: "http://workout-service-service:7083"
