--- a/cad-gymapp/templates/workout-service-service.yaml
+++ b/cad-gymapp/templates/workout-service-service.yaml
@@ -1,12 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: workout
-  labels:
-    run: workout
+  name: workout-service-service
 spec:
   selector:
-    app: workout
+    app: workout-service
   ports:
     - protocol: TCP
       port: 7083
