--- a/cad-gymapp/templates/workout-service-secret.yaml
+++ b/cad-gymapp/templates/workout-service-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: workout-service-secret
 type: Opaque
 stringData:
-  spring_datasource_username: cad  # TODO: Set user
+  spring_datasource_username: postgres  # TODO: Set user
   spring_datasource_password: test123  # TODO: Set pw and/or replace in pipeline
