--- a/cad-gymapp/templates/workout-service-deployment.yaml
+++ b/cad-gymapp/templates/workout-service-deployment.yaml
@@ -39,7 +39,7 @@ spec:
                   name: workout-service-secret
                   key: spring_datasource_password
           command: [ "./wait-for-it.sh" ]
-          args: [ "$(SQL_DB_URL)", "--", "mvn", "spring-boot:run" ]
+          args: [ "$(SQL_DB_URL)", "--", "java", "-jar", "/WorkoutService.jar" ]
           imagePullPolicy: Always
           ports:
             - containerPort: 7083
