--- a/cad-Frontend/package.json
+++ b/cad-Frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.7",
+    "primeng": "13.4.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
