--- a/helm/cad-gymapp/templates/user-service-configmap.yaml
+++ b/helm/cad-gymapp/templates/user-service-configmap.yaml
@@ -3,5 +3,5 @@ kind: ConfigMap
 metadata:
   name: user-service-configmap
 data:
-  sql_db_url: "postgresql-user-postgresql-ha-pgpool:5432"
-  spring_datasource_url: "jdbc:postgresql://postgresql-user-postgresql-ha-pgpool:5432/cad"
+  sql_db_url: {{ .Values.userService.sqlDbUrl }}
+  spring_datasource_url: {{ .Values.userService.springDatasourceUrl }}
