--- a/helm/cad-gymapp/templates/user-service-service.yaml
+++ b/helm/cad-gymapp/templates/user-service-service.yaml
@@ -7,4 +7,5 @@ spec:
     app: user-service
   ports:
     - protocol: TCP
-      port: 7082
+      port: {{ .Values.userService.port }}
+      targetPort: 7082
