--- a/helm/cad-gymapp/templates/workout-service-configmap.yaml
+++ b/helm/cad-gymapp/templates/workout-service-configmap.yaml
@@ -3,5 +3,5 @@ kind: ConfigMap
 metadata:
   name: workout-service-configmap
 data:
-  sql_db_url: "postgresql-workout-postgresql-ha-pgpool:5432"
-  spring_datasource_url: "jdbc:postgresql://postgresql-workout-postgresql-ha-pgpool:5432/cad"
+  sql_db_url: {{ .Values.workoutService.sqlDbUrl }}
+  spring_datasource_url: {{ .Values.workoutService.springDatasourceUrl }}
