--- a/helm/cad-gymapp/templates/frontend-service.yaml
+++ b/helm/cad-gymapp/templates/frontend-service.yaml
@@ -7,4 +7,5 @@ spec:
     app: frontend
   ports:
     - protocol: TCP
-      port: 80
+      port: {{ .Values.frontend.port }}
+      targetPort: 80
