--- a/helm/cad-gymapp/templates/invoice-cronjob-configmap.yaml
+++ b/helm/cad-gymapp/templates/invoice-cronjob-configmap.yaml
@@ -3,5 +3,5 @@ kind: ConfigMap
 metadata:
   name: invoice-cronjob-configmap
 data:
-  gym_service_url: "http://gym-service-service:7081"
-  user_service_url: "http://user-service-service:7082"
+  gym_service_url: {{ .Values.gymServiceUrl }}
+  user_service_url: {{ .Values.userServiceUrl }}
