--- a/helm/cad-gymapp/templates/user-service-deployment.yaml
+++ b/helm/cad-gymapp/templates/user-service-deployment.yaml
@@ -8,7 +8,7 @@ spec:
   selector:
     matchLabels:
       app: user-service
-  replicas: 2
+  replicas: {{ .Values.replicas }}
   template:
     metadata:
       labels:
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: user-service
-          image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-dev/cad-gym-user-service:latest
+          image: {{ .Values.userService.image }}
           env:
             - name: SQL_DB_URL
               valueFrom:
@@ -40,6 +40,6 @@ spec:
                   key: spring_datasource_password
           command: ["./wait-for-it.sh"]
           args: ["$(SQL_DB_URL)", "--", "java", "-jar", "/UserService.jar"]
-          imagePullPolicy: Always
+          imagePullPolicy: {{ .Values.imagePullPolicy }}
           ports:
             - containerPort: 7082
