--- a/helm/cad-gymapp/templates/workout-service-secret.yaml
+++ b/helm/cad-gymapp/templates/workout-service-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: workout-service-secret
 type: Opaque
 stringData:
-  spring_datasource_username: postgres  # TODO: Set user
-  spring_datasource_password: test123  # TODO: Set pw and/or replace in pipeline
+  spring_datasource_username: {{ .Values.workoutService.springDatasourceUsername }}
+  spring_datasource_password: {{ .Values.workoutService.springDatasourcePassword }}
