- Fix wrong container-images in staging and prod - Fix wrong service urls in helm chart - Add workout service url to helm chart values.yaml - Move staging and prod url to respective values.yaml

--- a/helm/cad-gymapp/values.yaml
+++ b/helm/cad-gymapp/values.yaml
@@ -83,8 +83,9 @@
 
 replicas: 2
 imagePullPolicy: Always
-gymServiceUrl: "http://gym-service-service:7081"
-userServiceUrl: "http://user-service-service:7082"
+gymServiceUrl: "http://gym-service-service:7081/gym"
+userServiceUrl: "http://user-service-service:7082/user"
+workoutServiceUrl: "http://workout-service-service:7083/workout"
 
 ingress:
   host: ""
